# skrapa

./: README.md  pyproject.toml  tox.ini
.github/workflows/: publish.yml  tests.yml
examples/: scan_callback.py  scan_mem.py  scan_pid.py  scan_proc.py  scan_yara.py  scrape_cs_aes.py  utils.py
skrapa/: __init__.py  base.py  exceptions.py
skrapa/linux/: __init__.py  attributes.py  base.py  helpers.py
skrapa/windows/: __init__.py  attributes.py  base.py  helpers.py
tests/: test_base.py
